# JohansenCointegrationTest

./: CMakeLists.txt  LICENSE  README.md  build.sh  johansen.cpp  johansen.hpp
.cache/clangd/index/: AlignedBox.h.3B0366BE770D9CFE.idx  AngleAxis.h.C113ADFB01743775.idx  ArithmeticSequence.h.F7FD3E9DD3E5B534.idx  Array.h.4C53BEAE4EF2B079.idx  ArrayBase.h.E4B19A8EDADABF8A.idx  ArrayCwiseBinaryOps.h.20DFF8EEDC995CBA.idx  ArrayCwiseUnaryOps.h.F4DDE8F3B1381C6F.idx  ArrayWrapper.h.6959E34CC0AA81DC.idx  Assign.h.2C48F67850DB392C.idx  AssignEvaluator.h.6910E0057067CB13.idx  AssignmentFunctors.h.AA090CD268D38715.idx  BDCSVD.h.F92F29D4974E6580.idx  BFloat16.h.891CDB09D0D8BEE5.idx  BandMatrix.h.EB2D2DCF582A0893.idx  BinaryFunctors.h.C4F41C2265D984DF.idx  BlasUtil.h.B007F81970E89077.idx  Block.h.50D9D31F48D75947.idx  BlockHouseholder.h.D5FE7235815EA0C3.idx  BlockMethods.h.47C8B08088C607AD.idx  BooleanRedux.h.453CFF9D99ECDCEB.idx  Cholesky.55D608147CB7CF29.idx  ColPivHouseholderQR.h.C534A877A1F977AC.idx  CommaInitializer.h.46D7F0CBFC4E6092.idx  CommonCwiseBinaryOps.h.594AC90801E15BF6.idx  CommonCwiseUnaryOps.h.AA62D73FDB1B52B5.idx  CompleteOrthogonalDecomposition.h.23CD7A249DAFD9AB.idx  Complex.h.13F3DF97909484B4.idx  Complex.h.B00E5642E857CF94.idx  ComplexEigenSolver.h.C4EB2534D900A19B.idx  ComplexSchur.h.52CD9A0D9E1DC81D.idx  ConditionEstimator.h.49388D25297B1020.idx  Core.331E658CC9325942.idx  (+181 more)
data/: series1.csv  series2.csv
include/: csv_parser.hpp  johansen_test.hpp
src/: csv_parser.cpp  johansen_test.cpp  main.cpp
test/: generate_cointegrated_data.py  test_johansen.py
